# veltrix-rfid

./: CLAUDE.md
client/: .gitignore  CMakeLists.txt  README.md  main.cpp  protocol.cpp  protocol.hpp  transport.cpp  transport.hpp
client/tests/: protocol_test.cpp
